center the menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,54 @@
 <body>
     <div class="container">
         <header class="header"></header>
-        <nav class="sidebar"></nav>
+        <nav class="sidebar">
+            <div class="menu">
+                <h2>
+                    <img src="./assets/icons/dashboard-icon.svg" alt="dashboard-icon" class="icon logo">
+                    Dashboard
+                </h2>
+                <ul class="sidebar-options">
+                    <li>
+                        <img src="./assets/icons/home-icon.svg" alt="home-icon" class="icon">
+                        Home
+                    </li>
+                    <li>
+                        <img src="./assets/icons/profile-icon.svg" alt="profile-icon" class="icon">
+                        Profile
+                    </li>
+                    <li>
+                        <img src="./assets/icons/message-icon.svg" alt="message-icon" class="icon">
+                        Messages
+                    </li>
+                    <li>
+                        <img src="./assets/icons/history-icon.svg" alt="history-icon" class="icon">
+                        History
+                    </li>
+                    <li>
+                        <img src="./assets/icons/task-icon.svg" alt="task-icon" class="icon">
+                        Tasks
+                    </li>
+                    <li>
+                        <img src="./assets/icons/communities-icon.svg" alt="communities-icon" class="icon">
+                        Communities
+                    </li>
+                </ul>
+                <ul class="sidebar-options">
+                    <li>
+                        <img src="./assets/icons/settings-icon.svg" alt="settings-icon" class="icon">
+                        Settings
+                    </li>
+                    <li>
+                        <img src="./assets/icons/support-icon.svg" alt="support-icon" class="icon">
+                        Support
+                    </li>
+                    <li>
+                        <img src="./assets/icons/privacy-icon.svg" alt="privacy-icon" class="icon">
+                        Privacy
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <main class="content"></main>
     </div>
 </body>
