--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </label>
         <input type="checkbox" id="toggle">
     </div>
-    
+
     <div class="container">
         <nav class="sidebar">
             <div class="menu">
@@ -92,7 +92,160 @@
                     </div>
                 </div>
             </header>
-            <main class="content"></main>
+
+            <main class="content">
+                <div class="projects">
+                    <h2>Your projects</h2>
+                    <div class="card">
+                        <h3 class="title">Super project</h3>
+                        <p class="content-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ratione eaque aspernatur rerum sed voluptate laborum nesciunt vero adipisci quos facilis cupiditate repudiandae in maxime cumque, ea doloribus? Commodi, in.
+                        </p>
+                        <div class="buttons-action">
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3 class="title">Super project</h3>
+                        <p class="content-text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati aperiam et voluptatum iure atque assumenda rerum, autem quasi adipisci asperiores ab, fuga laboriosam ipsa earum harum, neque vel vitae magni?
+                        </p>
+                        <div class="buttons-action">
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3 class="title">Super project</h3>
+                        <p class="content-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, fugit quae tempora aperiam illum reprehenderit? Illo explicabo ipsam quis. Facilis incidunt impedit temporibus est soluta tempora earum nostrum accusantium hic.
+                        </p>
+                        <div class="buttons-action">
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3 class="title">Super project</h3>
+                        <p class="content-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, consequuntur. Molestias ab aspernatur doloribus iure quaerat mollitia ad velit dolore maxime labore distinctio illum nisi, voluptates corporis optio ipsa accusantium.
+                        </p>
+                        <div class="buttons-action">
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3 class="title">Super project</h3>
+                        <p class="content-text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam praesentium tempore ullam eius, minus ab tempora obcaecati est? Tenetur, libero qui nostrum exercitationem nobis nisi consequatur fugit suscipit cumque.
+                        </p>
+                        <div class="buttons-action">
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3 class="title">Super project</h3>
+                        <p class="content-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, ipsum tenetur esse voluptas nostrum eveniet consectetur harum laboriosam? Illum libero fugit unde ratione perferendis animi esse hic beatae optio quisquam.
+                        </p>
+                        <div class="buttons-action">
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
+                            </button>
+                            <button class="btn-action">
+                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="announcements">
+                    <h2>Announcements</h2>
+                    <div class="announcement">
+                        <h3>Site Maintencement</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quos tenetur, reiciendis odio inventore quae, laboriosam quia enim dolore, omnis cupiditate minus eveniet voluptas nam ullam maiores eum provident minima?</p>
+                    </div>
+                    <div class="announcement">
+                        <h3>Community Share Day</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sequi vel earum corrupti doloribus dolorem? At optio voluptatem iste, officia adipisci minus odio itaque, dolorem soluta tempora fugiat, ex a.</p>
+                    </div>
+                    <div class="announcement">
+                        <h3>Updated Privacy Policy</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laboriosam sit esse quo, impedit rem. Aliquam dolor nihil ipsa, fugiat molestias explicabo saepe harum sed officia ipsam quod, et consectetur!</p>
+                    </div>
+                </div>
+                <div class="trending">
+                    <h2>Trending</h2>
+                    <div class="user">
+                        <div class="profile-picture"></div>
+                        <p class="username">
+                            @tegan
+                            <span>World Peace Builder</span>
+                        </p>
+                    </div>
+                    <div class="user">
+                        <div class="profile-picture"></div>
+                        <p class="username">
+                            @tegan
+                            <span>World Peace Builder</span>
+                        </p>
+                    </div>
+                    <div class="user">
+                        <div class="profile-picture"></div>
+                        <p class="username">
+                            @tegan
+                            <span>World Peace Builder</span>
+                        </p>
+                    </div>
+                    <div class="user">
+                        <div class="profile-picture"></div>
+                        <p class="username">
+                            @tegan
+                            <span>World Peace Builder</span>
+                        </p>
+                    </div>
+                </div>
+            </main>
         </div>
     </div>
 </body>
