style 'your projects'

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <h2>Your projects</h2>
                     <div class="card">
                         <h3 class="title">Super project</h3>
-                        <p class="content-text">
+                        <p class="content-text" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ratione eaque aspernatur rerum sed voluptate laborum nesciunt vero adipisci quos facilis cupiditate repudiandae in maxime cumque, ea doloribus? Commodi, in.">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ratione eaque aspernatur rerum sed voluptate laborum nesciunt vero adipisci quos facilis cupiditate repudiandae in maxime cumque, ea doloribus? Commodi, in.
                         </p>
                         <div class="buttons-action">
@@ -115,7 +115,7 @@
                     </div>
                     <div class="card">
                         <h3 class="title">Super project</h3>
-                        <p class="content-text">
+                        <p class="content-text" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati aperiam et voluptatum iure atque assumenda rerum, autem quasi adipisci asperiores ab, fuga laboriosam ipsa earum harum, neque vel vitae magni?">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati aperiam et voluptatum iure atque assumenda rerum, autem quasi adipisci asperiores ab, fuga laboriosam ipsa earum harum, neque vel vitae magni?
                         </p>
                         <div class="buttons-action">
@@ -132,7 +132,7 @@
                     </div>
                     <div class="card">
                         <h3 class="title">Super project</h3>
-                        <p class="content-text">
+                        <p class="content-text" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, fugit quae tempora aperiam illum reprehenderit? Illo explicabo ipsam quis. Facilis incidunt impedit temporibus est soluta tempora earum nostrum accusantium hic.">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, fugit quae tempora aperiam illum reprehenderit? Illo explicabo ipsam quis. Facilis incidunt impedit temporibus est soluta tempora earum nostrum accusantium hic.
                         </p>
                         <div class="buttons-action">
@@ -149,7 +149,7 @@
                     </div>
                     <div class="card">
                         <h3 class="title">Super project</h3>
-                        <p class="content-text">
+                        <p class="content-text" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, consequuntur. Molestias ab aspernatur doloribus iure quaerat mollitia ad velit dolore maxime labore distinctio illum nisi, voluptates corporis optio ipsa accusantium.">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, consequuntur. Molestias ab aspernatur doloribus iure quaerat mollitia ad velit dolore maxime labore distinctio illum nisi, voluptates corporis optio ipsa accusantium.
                         </p>
                         <div class="buttons-action">
@@ -166,7 +166,7 @@
                     </div>
                     <div class="card">
                         <h3 class="title">Super project</h3>
-                        <p class="content-text">
+                        <p class="content-text" content="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam praesentium tempore ullam eius, minus ab tempora obcaecati est? Tenetur, libero qui nostrum exercitationem nobis nisi consequatur fugit suscipit cumque.">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam praesentium tempore ullam eius, minus ab tempora obcaecati est? Tenetur, libero qui nostrum exercitationem nobis nisi consequatur fugit suscipit cumque.
                         </p>
                         <div class="buttons-action">
@@ -183,7 +183,7 @@
                     </div>
                     <div class="card">
                         <h3 class="title">Super project</h3>
-                        <p class="content-text">
+                        <p class="content-text" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, ipsum tenetur esse voluptas nostrum eveniet consectetur harum laboriosam? Illum libero fugit unde ratione perferendis animi esse hic beatae optio quisquam.">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, ipsum tenetur esse voluptas nostrum eveniet consectetur harum laboriosam? Illum libero fugit unde ratione perferendis animi esse hic beatae optio quisquam.
                         </p>
                         <div class="buttons-action">
