Ad buttons in cards

--- a/index.html
+++ b/index.html
@@ -101,16 +101,25 @@
                         <p class="content-text" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ratione eaque aspernatur rerum sed voluptate laborum nesciunt vero adipisci quos facilis cupiditate repudiandae in maxime cumque, ea doloribus? Commodi, in.">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ratione eaque aspernatur rerum sed voluptate laborum nesciunt vero adipisci quos facilis cupiditate repudiandae in maxime cumque, ea doloribus? Commodi, in.
                         </p>
-                        <div class="buttons-action">
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
-                            </button>
+                        <div class="action-buttons">
+                            <p class="btn-action">
+                                <label for="favorite-btn">
+                                    <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                                </label>
+                                <input type="button" id="favorite-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="see-btn">
+                                    <img src="./assets/icons/card/see-icon.svg" alt="see-icon" class="icon">
+                                </label>
+                                <input type="button" id="see-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="share-btn">
+                                    <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                                </label>
+                                <input type="button" id="share-btn">
+                            </p>
                         </div>
                     </div>
                     <div class="card">
@@ -118,16 +127,25 @@
                         <p class="content-text" content="Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati aperiam et voluptatum iure atque assumenda rerum, autem quasi adipisci asperiores ab, fuga laboriosam ipsa earum harum, neque vel vitae magni?">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati aperiam et voluptatum iure atque assumenda rerum, autem quasi adipisci asperiores ab, fuga laboriosam ipsa earum harum, neque vel vitae magni?
                         </p>
-                        <div class="buttons-action">
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
-                            </button>
+                        <div class="action-buttons">
+                            <p class="btn-action">
+                                <label for="favorite-btn">
+                                    <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                                </label>
+                                <input type="button" id="favorite-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="see-btn">
+                                    <img src="./assets/icons/card/see-icon.svg" alt="see-icon" class="icon">
+                                </label>
+                                <input type="button" id="see-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="share-btn">
+                                    <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                                </label>
+                                <input type="button" id="share-btn">
+                            </p>
                         </div>
                     </div>
                     <div class="card">
@@ -135,16 +153,25 @@
                         <p class="content-text" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, fugit quae tempora aperiam illum reprehenderit? Illo explicabo ipsam quis. Facilis incidunt impedit temporibus est soluta tempora earum nostrum accusantium hic.">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, fugit quae tempora aperiam illum reprehenderit? Illo explicabo ipsam quis. Facilis incidunt impedit temporibus est soluta tempora earum nostrum accusantium hic.
                         </p>
-                        <div class="buttons-action">
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
-                            </button>
+                        <div class="action-buttons">
+                            <p class="btn-action">
+                                <label for="favorite-btn">
+                                    <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                                </label>
+                                <input type="button" id="favorite-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="see-btn">
+                                    <img src="./assets/icons/card/see-icon.svg" alt="see-icon" class="icon">
+                                </label>
+                                <input type="button" id="see-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="share-btn">
+                                    <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                                </label>
+                                <input type="button" id="share-btn">
+                            </p>
                         </div>
                     </div>
                     <div class="card">
@@ -152,16 +179,25 @@
                         <p class="content-text" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, consequuntur. Molestias ab aspernatur doloribus iure quaerat mollitia ad velit dolore maxime labore distinctio illum nisi, voluptates corporis optio ipsa accusantium.">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, consequuntur. Molestias ab aspernatur doloribus iure quaerat mollitia ad velit dolore maxime labore distinctio illum nisi, voluptates corporis optio ipsa accusantium.
                         </p>
-                        <div class="buttons-action">
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
-                            </button>
+                        <div class="action-buttons">
+                            <p class="btn-action">
+                                <label for="favorite-btn">
+                                    <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                                </label>
+                                <input type="button" id="favorite-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="see-btn">
+                                    <img src="./assets/icons/card/see-icon.svg" alt="see-icon" class="icon">
+                                </label>
+                                <input type="button" id="see-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="share-btn">
+                                    <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                                </label>
+                                <input type="button" id="share-btn">
+                            </p>
                         </div>
                     </div>
                     <div class="card">
@@ -169,16 +205,25 @@
                         <p class="content-text" content="Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam praesentium tempore ullam eius, minus ab tempora obcaecati est? Tenetur, libero qui nostrum exercitationem nobis nisi consequatur fugit suscipit cumque.">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio quibusdam praesentium tempore ullam eius, minus ab tempora obcaecati est? Tenetur, libero qui nostrum exercitationem nobis nisi consequatur fugit suscipit cumque.
                         </p>
-                        <div class="buttons-action">
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
-                            </button>
+                        <div class="action-buttons">
+                            <p class="btn-action">
+                                <label for="favorite-btn">
+                                    <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                                </label>
+                                <input type="button" id="favorite-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="see-btn">
+                                    <img src="./assets/icons/card/see-icon.svg" alt="see-icon" class="icon">
+                                </label>
+                                <input type="button" id="see-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="share-btn">
+                                    <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                                </label>
+                                <input type="button" id="share-btn">
+                            </p>
                         </div>
                     </div>
                     <div class="card">
@@ -186,16 +231,25 @@
                         <p class="content-text" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, ipsum tenetur esse voluptas nostrum eveniet consectetur harum laboriosam? Illum libero fugit unde ratione perferendis animi esse hic beatae optio quisquam.">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, ipsum tenetur esse voluptas nostrum eveniet consectetur harum laboriosam? Illum libero fugit unde ratione perferendis animi esse hic beatae optio quisquam.
                         </p>
-                        <div class="buttons-action">
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/saw-icon.svg" alt="saw-icon" class="icon">
-                            </button>
-                            <button class="btn-action">
-                                <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
-                            </button>
+                        <div class="action-buttons">
+                            <p class="btn-action">
+                                <label for="favorite-btn">
+                                    <img src="./assets/icons/card/favorite-icon.svg" alt="favorite-icon" class="icon">
+                                </label>
+                                <input type="button" id="favorite-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="see-btn">
+                                    <img src="./assets/icons/card/see-icon.svg" alt="see-icon" class="icon">
+                                </label>
+                                <input type="button" id="see-btn">
+                            </p>
+                            <p class="btn-action">
+                                <label for="share-btn">
+                                    <img src="./assets/icons/card/share-icon.svg" alt="share-icon" class="icon">
+                                </label>
+                                <input type="button" id="share-btn">
+                            </p>
                         </div>
                     </div>
                 </div>
