add style to announcements

--- a/index.html
+++ b/index.html
@@ -255,17 +255,21 @@
                 </div>
                 <div class="announcements">
                     <h2>Announcements</h2>
-                    <div class="announcement">
-                        <h3>Site Maintencement</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quos tenetur, reiciendis odio inventore quae, laboriosam quia enim dolore, omnis cupiditate minus eveniet voluptas nam ullam maiores eum provident minima?</p>
-                    </div>
-                    <div class="announcement">
-                        <h3>Community Share Day</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sequi vel earum corrupti doloribus dolorem? At optio voluptatem iste, officia adipisci minus odio itaque, dolorem soluta tempora fugiat, ex a.</p>
-                    </div>
-                    <div class="announcement">
-                        <h3>Updated Privacy Policy</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum laboriosam sit esse quo, impedit rem. Aliquam dolor nihil ipsa, fugiat molestias explicabo saepe harum sed officia ipsam quod, et consectetur!</p>
+                    <div>
+                        <div class="announcement">
+                            <h3>Site Maintencement</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        </div>
+                        <hr>
+                        <div class="announcement">
+                            <h3>Community Share Day</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <hr>
+                        <div class="announcement">
+                            <h3>Updated Privacy Policy</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="trending">
