--- a/index.html
+++ b/index.html
@@ -274,33 +274,27 @@
                 </div>
                 <div class="trending">
                     <h2>Trending</h2>
-                    <div class="user">
-                        <div class="profile-picture"></div>
-                        <p class="username">
-                            @tegan
-                            <span>World Peace Builder</span>
-                        </p>
-                    </div>
-                    <div class="user">
-                        <div class="profile-picture"></div>
-                        <p class="username">
-                            @tegan
-                            <span>World Peace Builder</span>
-                        </p>
-                    </div>
-                    <div class="user">
-                        <div class="profile-picture"></div>
-                        <p class="username">
-                            @tegan
-                            <span>World Peace Builder</span>
-                        </p>
-                    </div>
-                    <div class="user">
-                        <div class="profile-picture"></div>
-                        <p class="username">
-                            @tegan
-                            <span>World Peace Builder</span>
-                        </p>
+                    <div>
+                        <div class="user">
+                            <div class="profile-picture"></div>
+                            <p class="username">@tegan</p>
+                            <p class="state">World Peace Builder</p>
+                        </div>
+                        <div class="user">
+                            <div class="profile-picture"></div>
+                            <p class="username">@tegan</p>
+                            <p class="state">World Peace Builder</p>
+                        </div>
+                        <div class="user">
+                            <div class="profile-picture"></div>
+                            <p class="username">@tegan</p>
+                            <p class="state">World Peace Builder</p>
+                        </div>
+                        <div class="user">
+                            <div class="profile-picture"></div>
+                            <p class="username">@tegan</p>
+                            <p class="state">World Peace Builder</p>
+                        </div>
                     </div>
                 </div>
             </main>
